@@ -5,33 +5,112 @@ Fast Gherkin lexer and parser based on Ragel. Gherkin is two things:
 * The language that has evolved out of the Cucumber project.
 * This library
 
-== Generating and building the code
+Supported platforms:
 
-You'll need MRI (any version) if you want to build for MRI. To build the Java implementation you'll need JRuby.
-You'll also need Ragel installed and on your PATH.
+* Ruby 1.8.6-1.9.2 (MRI, JRuby, REE, Rubinius)
+* Pure Java
+* .NET
+* IronRuby (experimental)
+* Javascript (coming soon)
 
-=== Any Ruby
+== Installing the toolchain
 
-Before you can build you must install some gems:
+Due to the cross-platform nature of this library, you have to install a lot of tools to build gherkin yourself.
+In order to make it easier for occasional contributors to get the development environment up and running, you don't
+have to install everything up front. The build scripts should tell you if you are missing something. For example,
+you shouldn't have to install MinGW to build windows binaries if you are a Linux user and just want to fix a bug in
+the C code.
 
-  gem install bundler && bundle install
+=== Common dependencies
 
-You also need to clone the cucumber git repo to a "cucumber" sibling folder of your gherkin folder.
+* Ragel (brew install ragel or apt-get install ragel)
+* Ruby (any version should do) - to run the Rake build script
+* A clone of the cucumber git repo to a "cucumber" sibling folder of your gherkin folder.
+* RVM (you may not need this if you are only building for a single platform)
 
-=== MRI
+With this minimal toolchain installed, install Ruby gems needed by the build:
 
-  rake clean compile
+  gem install bundler
+  bundle install
 
-=== Java
-
-  rake clean jar
-
-== Running RSpec and Cucumber tests
+Running RSpec and Cucumber tests
 
   rake clean spec cucumber
 
 If the RL_LANG environment variable is set, only the parsers for the languages specified there will be built.
 E.g. in Bash, export RL_LANG="en,fr,no". This can be quite helpful when modifying the Ragel grammar.
+
+See subsections for building for a specific platform.
+
+=== MRI, REE or Rubinius
+
+You'll need GCC installed.
+
+Build the gem with:
+
+  rake build
+
+=== Pure Java and JRuby
+
+You must install JRuby to build the pure Java jar or the JRuby gem:
+
+  rvm install jruby
+  rvm use jruby
+  rvm gemset create cucumber
+  rvm use @cucumber
+  gem install bundler
+  bundle install
+
+Now you can build the jar with:
+
+  rake clean jar
+
+=== .NET and IronRuby
+
+You must install Mono and IKVM to build the pure .NET dll and the IronRuby gem:
+
+* Install Mono from http://www.mono-project.com/ and make sure it's on your $PATH
+* Download IKVM from http://www.ikvm.net/ and extract it to /usr/local/ikvm so that you have a /usr/local/ikvm/bin/ikvmc.exe
+
+Now you can build the .NET dll with:
+
+  rake ikvm
+
+=== MinGW Rubies (for Windows gems)
+
+You must install MinGW rubies to build gems fow Windows.
+First you need to download and install MinGW:
+
+OS X users can get it from http://crossgcc.rts-software.org/doku.php
+Once you have installed it, add this to your .bashrc:
+
+  export PATH=$PATH:/usr/local/i386-mingw32-4.3.0/bin
+
+Now, let's install some rubies.
+Make sure you have openssl installed first.
+
+  brew install openssl
+
+  # 1.8.6
+  # Don't worry about inconsistent patchlevels here. It works.
+  rvm install 1.8.6-p399
+  rvm use 1.8.6-p399
+  rvm gemset create cucumber
+  rvm use @cucumber
+  gem install bundler
+  bundle install
+  rake-compiler cross-ruby VERSION=1.8.6-p287
+
+  # 1.9.1
+  # Later 1.9.1 patch levels or 1.9.2 don't compile on mingw.
+  # The compiled binaries should still work on 1.9.2
+  rvm install 1.9.1-p243
+  rvm use 1.9.1-p243
+  rvm gemset create cucumber
+  rvm use @cucumber
+  gem install bundler
+  bundle install
+  rake-compiler cross-ruby VERSION=1.9.1-p243
 
 == Release process
 
